--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "node-red-contrib-tuya-smart-device",
-  "version": "5.3.0",
+  "name": "@nrchkb/node-red-tuya-smart-device",
+  "version": "0.1.0",
   "description": "A node-red module to interact with the tuya smart devices",
-  "repository": "https://github.com/vinodsr/node-red-contrib-tuya-smart-device",
+  "repository": "https://github.com/NRCHKB/node-red-tuya-smart-device",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Vinod S R",
+  "author": "Tadeusz Wyrzykowski <shaquu@icloud.com> (https://github.com/Shaquu)",
   "license": "MIT",
-  "homepage": "https://github.com/vinodsr/node-red-contrib-tuya-smart-device",
+  "homepage": "https://github.com/NRCHKB/node-red-tuya-smart-device",
   "keywords": [
-    "node-red"
+    "node-red",
+    "tuya",
+    "nrchkb"
   ],
   "node-red": {
-    "version": ">=2.5.0",
+    "version": ">=3.0.0",
     "nodes": {
       "tuya-smart-device": "src/tuya-smart-device.js",
       "tuya-smart-device-generic": "src/tuya-smart-device-generic.js"
     }
   },
   "dependencies": {
-    "tuyapi": "~7.5.1"
+    "tuyapi": "~7.5.2"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   }
 }
